--- a/comets/templates/comets/lost.html
+++ b/comets/templates/comets/lost.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
-<div class="flex flex-collumn items-center">
-{% if the_end %}
-<p>Go outside and look at it</p>
-{% else %}
-<p>No sadly, it will not be today that something in your life.</p>
-{% endif %}
+<div class="flex flex-column items-center">
+    {% if the_end %}
+    <p>Go outside and look at it</p>
+    {% else %}
+    <p>No sadly, it will not be today that something in your life.</p>
+    {% endif %}
 </div>
 
 {% endblock content %}
