--- a/comets/templates/comets/list.html
+++ b/comets/templates/comets/list.html
@@ -1,11 +1,47 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load comets_extras %}
+
+{% block head %}
+<link href="{% static 'comets/css/comet_list.css' %}" rel="stylesheet" type="text/css">
+{% endblock head %}
 
 {% block content %}
-<div>
-    <ul>
-        {% for comet in comets %}
-        <li>{{ comet.name }} <a href="{% url 'comets:detail' comet.id max_date %}">Detail</a></li>
-        {% endfor %}
-    </ul>
-</div>
+<section id="list-section">
+    <div id="list-title" class="flex flex-column items-center">
+        <h2>The celestials approaching Earth</h2>
+        <div id="search-form">
+            {% include 'comets/search_form.html' with form=search_form only %}
+        </div>
+    </div>
+    {% if comets|length > 0 %}
+        <div class="panel panel-list">
+            <div class="panel-header clearfix">
+                <div class="col col-3">Name</div>
+                <div class="col col-3">Aprox diameter</div>
+                <div class="col col-3">Distance from us</div>
+                <div class="col col-3">When</div>
+            </div>
+            <div class="panel-body">
+                {% for comet in comets %}
+                    <div class="list-row clearfix">
+                        <a href="{% url 'comets:detail' comet.id to_date %}">
+                            <div class="col col-3">{{ comet.name }}</div>
+                            <div class="col col-3">{{ comet.diameter_avg }}m</div>
+                            <div class="col col-6">
+                                <div class="clearfix">
+                                    {% for approach in comet.close_approaches %}
+                                        <div class="col col-6">{{ approach.distance|pretty_float }}km</div>
+                                        <div class="col col-6">{{ approach.time|time:'H:i' }} {{ approach.time|date }}</div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
+    
+</section>
 {% endblock content %}
