--- a/app/comets/static/comets/sass/home.sass
+++ b/app/comets/static/comets/sass/home.sass
@@ -19,7 +19,7 @@
 
         a
             font-family: "BaiJamjuree-bold"
-            font-size: 1.5vh
+            font-size: 13px
             color: white
 
     .investigate-panel
