--- a/app/comets/static/comets/css/search_form.css
+++ b/app/comets/static/comets/css/search_form.css
@@ -22,6 +22,12 @@
 .panel .panel-header, .panel .panel-body {
   padding: 5px 15px;
 }
+@media screen and (max-width: 767px) {
+  .panel .panel-header, .panel .panel-body {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 
 .btn {
   padding: 0px 7px;
