Added test views Fix bug in detail view when no service Fix makefile static_dir_root

--- a/app/comets/static/comets/css/comet_detail.css
+++ b/app/comets/static/comets/css/comet_detail.css
@@ -45,6 +45,10 @@
 #detail-section {
   padding: 0 3vh;
 }
+#detail-section a {
+  color: white;
+  font-size: 20px;
+}
 #detail-section #detail-title {
   text-align: center;
 }
@@ -59,10 +63,6 @@
   #detail-section #detail-title h2 .comet-highlight {
     font-size: 25px;
   }
-}
-#detail-section #detail-title a {
-  color: white;
-  font-size: 20px;
 }
 #detail-section #detail-title .detail-info {
   margin-top: 4vh;
