--- a/app/comets/templates/comets/lost.html
+++ b/app/comets/templates/comets/lost.html
@@ -2,9 +2,14 @@
 
 {% block content %}
 
-<div class="flex flex-column items-center">
+<div class="flex flex-column items-center mt4">
     {% if the_end %}
-    <p>Go outside and look at it</p>
+    <ul class="list-reset">
+        <li class="mb3">Go outside and look at it</li>
+        <li class="mb3">Play some nice music, <a href="https://www.youtube.com/watch?v=G55GspnNkBo">here's some</a></li>
+        <li class="mb3">Crawl behind your sofa, you may not die</li>
+        <li class="mb3">Meditate the shit out of yourself</li>
+    </ul>
     {% else %}
     <p>No sadly, it will not be today that something in your life.</p>
     {% endif %}
